# home-efficiency-calculator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  MANIFEST.in  azure_web_app_instructions.md  gitdiff.txt  pyproject.toml  readme.md  requirements-data-analysis.txt  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: pip-audit.yml  pylint.yml  python-tests.yml
app/: __init__.py  constants.py  main.py
app/api/: __init__.py  checkbox_behaviour_endpoint.py  component_savings_endpoints.py  fixed_cost_savings_endpoint.py  household_savings_endpoint.py  solar_savings_endpoint.py  user_geography_endpoint.py
app/constants/: __init__.py  cooktop.py  cooktop_energy.py  driving.py  driving_energy.py  general.py  general_constants.py  heating.py  heating_energy.py  hot_water.py  hot_water_energy.py  other_electricity.py  other_elx.py  solar_energy.py
app/models/: __init__.py  energy_plans.py  response_models.py  usage_profiles.py  user_answers.py
app/services/: __init__.py  configuration.py  cost_calculator.py  driving_helpers.py  energy_calculator.py  get_base_demand_profile.py  get_climate_zone.py  get_energy_plans.py  get_solar_generation.py  get_temperatures.py  helpers.py  hot_water_helpers.py  other_answers_helpers.py  solar_calculator.py  solar_helpers.py  usage_profile_helpers.py
data_analysis/: readme.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0988c6fecbd3ae5e___init___py.html  z_0988c6fecbd3ae5e_cooktop_py.html  z_0988c6fecbd3ae5e_driving_py.html  z_0988c6fecbd3ae5e_general_py.html  z_0988c6fecbd3ae5e_get_base_demand_profile_py.html  z_0988c6fecbd3ae5e_heating_py.html  z_0988c6fecbd3ae5e_hot_water_py.html  z_0c8d8ab345936837___init___py.html  z_0db1ec4121258c72___init___py.html  z_0db1ec4121258c72_test_cooktop_answers_py.html  z_0db1ec4121258c72_test_driving_answers_py.html  z_0db1ec4121258c72_test_energy_costs_py.html  z_0db1ec4121258c72_test_energy_plan_py.html  z_0db1ec4121258c72_test_heating_answers_py.html  z_0db1ec4121258c72_test_hotwater_answers_py.html  z_0db1ec4121258c72_test_household_energy_plan_py.html  z_0db1ec4121258c72_test_response_models_py.html  z_0db1ec4121258c72_test_solar_answers_py.html  z_0db1ec4121258c72_test_user_answers_py.html  z_0db1ec4121258c72_test_your_home_answers_py.html  z_12781dad1f460d49___init___py.html  z_12781dad1f460d49_calculate_solar_savings_py.html  z_12781dad1f460d49_solar_diverter_py.html  z_12781dad1f460d49_solar_helpers_py.html  z_12a956c526df78a3___init___py.html  z_14b48d6a2e9711e6___init___py.html  z_14b48d6a2e9711e6_edb_to_locations_py.html  z_14b48d6a2e9711e6_electricity_plans_analysis_py.html  z_17724b7d3ea39af9___init___py.html  z_17724b7d3ea39af9_cooktop_py.html  z_17724b7d3ea39af9_driving_py.html  z_17724b7d3ea39af9_heating_py.html  z_17724b7d3ea39af9_hot_water_py.html  z_17724b7d3ea39af9_other_py.html  z_17724b7d3ea39af9_solar_py.html  z_17724b7d3ea39af9_your_home_py.html  (+87 more)
lookup/: cooktop_lookup_table.csv  electricity_plans_lookup_table.csv  hot_water_lookup_table.csv  lpg_fixed_cost_lookup_table.csv  natural_gas_fixed_cost_lookup_table.csv  postcode_to_climate_and_energy_plans.csv  solar_cooktop_lookup_table.csv  solar_generation_lookup_table.csv  solar_other_electricity_usage_lookup_table.csv  solar_vehicle_lookup_table.csv
resources/: readme.md
resources/test_data/: readme.md
scripts/: cost_calculations.py  costs_and_co2_lookup_tables.py  demo_smart_home_logic.py  gas_connection_lookup_table.py  generate_lookup.py  pip_audit_hook.py  profile_slow_test_01.py  profile_slow_test_02.py  readme.md  solar_generation_lookup_tables.py  solar_kwh_reduction_lookup_table.py  solar_savings_lookup_table.py
tests/: test_energy_plan.py  test_helpers.py  test_main.py  test_user_answers.py
(+166 files in other folders)
