[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home_efficiency_calculator"
version = "0.1.0"
description = "A web API for household energy cost and CO2 emissions estimates"
authors = [{ name = "EECA", email = "DataAndAnalytics@eeca.govt.nz" }]
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "pytest",  # Note: Typically, test dependencies are not included in the main dependencies
    "requests",
    "httpx"
]

[project.scripts]
electrify_app = "app.main:run"

[project.urls]
Homepage = "https://github.com/EECA-NZ/home-efficiency-calculator"

[tool.setuptools]
packages = { find = { exclude = ["lookup", "lookup.*"] } }
include-package-data = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"